# drawio_data_shape

./: .gitignore  LICENSE  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: release.yml
drawio_data_shape/: color.py  datasource_container.py  deflate_tools.py  library_models.py  medallion.py  model.py  mxlibrary.py  stencil.py
drawio_data_shape/models/: shape.py
drawio_data_shape/mx/: models.py  style.py  xml_visitor.py
drawio_data_shape/shape/: datasource_container.py  medallion.py
drawio_data_shape/templates/: aws_graph_model.jinja2  configuration.py  graph_model.jinja2  image_graph_model.jinja2  stencil.py
drawio_data_shape/templates/shapes/: datasource.jinja2  medallion.jinja2  plain_medallion.jinja2
pydrawio_data_shape/: color.py  model.py  mxlibrary.py  stencil.py  templating.py
pydrawio_data_shape/templates/: graph_model.jinja2  stencil.jinja2
tests/: conftest.py  test_mx_graph_model.py
tests/approved_files/: test_mx_graph_model.test_datasource_shape.approved.xml  test_mx_graph_model.test_mx_cell_empty.approved.xml  test_mx_graph_model.test_mx_cell_parent.approved.xml  test_mx_graph_model.test_mx_cell_with_geometry.approved.xml  test_mx_graph_model.test_mx_cell_with_geometry_and_alternate_bounds.approved.xml  test_mx_graph_model.test_mx_geometry.approved.xml  test_mx_graph_model.test_mx_rectangle.approved.xml  test_mx_graph_model.test_simple_shape.approved.xml  test_mx_graph_model.test_user_object.approved.xml  test_mx_graph_model.test_user_object_with_mx_cell.approved.xml
