[project]
name = "drawio_data_shape"
version = "0.2.0"
description = ""
authors = [{ name = "Stéphane Trou", email = "stephane.trou@stephane.trou" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
dependencies = ["jinja2>=3.1.4,<4"]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "ruff>=0.4.4,<0.5",
    "nox>=2024.4.15,<2025",
    "deptry>=0.16.1,<0.17",
    "pytest-cov>=4.1.0,<5",
    "mkdocs>=1.6.0,<2",
    "approvaltests>=8.4.1,<9",
    "mkdocstrings>=0.25.1,<0.26",
    "mkdocs-material>=9.5.23,<10",
    "mypy>=1.19.0",
]

[tool.hatch.build.targets.sdist]
include = ["drawio_data_shape"]

[tool.hatch.build.targets.wheel]
include = ["drawio_data_shape"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [ "E", "F", "UP", "B", "S", "SIM", "I" ]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.mypy]
ignore_missing_imports = true
